# dogstatsd-example

./: docker-compose.yml  pyproject.toml  readme.md
dogstatsd_example/: __init__.py
tests/: test_dogstatsd_example.py
