[tool.poetry]
name = "dogstatsd-example"
version = "0.1.0"
description = ""
authors = ["James Carr <james.r.carr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datadog = "^0.41.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report = "dogstatsd_example:cli"
